2003-06-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Saturn.cxx (Repository): Fixed initialization order of variables in
	arrival_of_kings().
